/*
 * Copyright 2023 Matrix Origin
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package proxy;
option go_package = "github.com/matrixorigin/matrixone/pkg/pb/proxy";

message ExtraInfo {
  bytes Salt = 1;
  bool InternalConn = 2;
  uint32 ConnectionID = 3;
  map<string, string> Label = 4;
  string ClientAddr = 5;
}
